--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
+              src="john-doe.png"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
@@ -48,12 +48,12 @@
           </ul>
           <div class="header__main-ham-menu-cont">
             <img
-              src="./assets/svg/ham-menu.svg"
+              src="ham-menu.svg"
               alt="hamburger menu"
               class="header__main-ham-menu"
             />
             <img
-              src="./assets/svg/ham-menu-close.svg"
+              src="ham-menu-close.svg"
               alt="hamburger menu close"
               class="header__main-ham-menu-close d-none"
             />
@@ -100,7 +100,7 @@
         <div class="home-hero__social">
           <a href="#" class="home-hero__social-icon-link">
             <img
-              src="./assets/png/linkedin-ico.png"
+              src="linkedin-ico.png"
               alt="icon"
               class="home-hero__social-icon"
             />
@@ -109,7 +109,7 @@
         <div class="home-hero__social">
           <a href="#" class="home-hero__social-icon-link">
             <img
-              src="./assets/png/github-ico.png"
+              src="github-ico.png"
               alt="icon"
               class="home-hero__social-icon"
             />
@@ -118,7 +118,7 @@
         <div class="home-hero__social">
           <a href="#" class="home-hero__social-icon-link">
             <img
-              src="./assets/png/twitter-ico.png"
+              src="twitter-ico.png"
               alt="icon"
               class="home-hero__social-icon"
             />
@@ -127,7 +127,7 @@
         <div class="home-hero__social">
           <a href="#" class="home-hero__social-icon-link">
             <img
-              src="./assets/png/yt-ico.png"
+              src="yt-ico.png"
               alt="icon"
               class="home-hero__social-icon"
             />
@@ -139,7 +139,7 @@
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
-              src="./assets/png/insta-ico.png"
+              src="insta-ico.png"
               alt="icon"
               class="home-hero__social-icon"
             />
@@ -219,7 +219,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="project-mockup-example.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -243,7 +243,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="project-mockup-example.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -267,7 +267,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="project-mockup-example.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -354,55 +354,50 @@
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
-                  src="./assets/png/linkedin-ico.png"
+                  src="linkedin-ico.png"
                   alt="icon"
                 />
               </a>
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
-                  src="./assets/png/github-ico.png"
+                  src="github-ico.png"
                   alt="icon"
                 />
               </a>
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
-                  src="./assets/png/twitter-ico.png"
+                  src="twitter-ico.png"
                   alt="icon"
                 />
               </a>
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
-                  src="./assets/png/yt-ico.png"
+                  src="yt-ico.png"
                   alt="icon"
                 />
               </a>
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
-                  src="./assets/png/insta-ico.png"
+                  src="insta-ico.png"
                   alt="icon"
                 />
               </a>
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">DK Rahul</h4>
             <p class="main-footer__short-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
               tempora explicabo quae quod deserunt
             </p>
           </div>
         </div>
-
-        <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
+          
         </div>
       </div>
     </footer>
