--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Portfolio</title>
-    <meta name="description" content="Portfolio Template for Developer" />
-
+    <meta name="description" content="Portfolio" />
     <link rel="stylesheet" href="style.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
   </head>
   <body>
     <header class="header">
@@ -27,23 +24,23 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">DK Rahul</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
             <li class="header__link-wrapper">
-              <a href="./index.html" class="header__link"> Home </a>
+              <a href="index.html" class="header__link"> Home </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html#about" class="header__link">About </a>
+              <a href="index.html#about" class="header__link">About </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html#projects" class="header__link">
+              <a href="index.html#projects" class="header__link">
                 Projects
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html#contact" class="header__link"> Contact </a>
+              <a href="index.html#contact" class="header__link"> Contact </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -64,19 +61,19 @@
         <div class="header__sm-menu-content">
           <ul class="header__sm-menu-links">
             <li class="header__sm-menu-link">
-              <a href="./index.html"> Home </a>
+              <a href="index.html"> Home </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#about"> About </a>
+              <a href="index.html#about"> About </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#projects"> Projects </a>
+              <a href="index.html#projects"> Projects </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#contact"> Contact </a>
+              <a href="index.html#contact"> Contact </a>
             </li>
           </ul>
         </div>
@@ -191,15 +188,14 @@
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React</div>
-              <div class="skills__skill">SASS</div>
-              <div class="skills__skill">GIT</div>
-              <div class="skills__skill">Shopify</div>
-              <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
+              <div class="skills__skill">C</div>
+              <div class="skills__skill">Ethical Hacking</div>
+              <div class="skills__skill">Photoshop</div>
+              <div class="skills__skill">Mongo DB</div>
+              <div class="skills__skill">Linux</div>
+              <div class="skills__skill">Block Chain</div>
               <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              
             </div>
           </div>
         </div>
@@ -219,7 +215,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="project-mockup-example.jpeg"
+                src="temp.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -243,7 +239,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="project-mockup-example.jpeg"
+                src="temp.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -267,7 +263,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="project-mockup-example.jpeg"
+                src="temp.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
