--- a/index.html
+++ b/index.html
@@ -81,12 +81,10 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is DK Rahul</h1>
+        <h1 class="heading-primary">Hey, i am DK Rahul</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente solutions for
-            complex problems
+           Fun Fact : I hate testers !!
           </p>
         </div>
         <div class="home-hero__cta">
@@ -152,8 +150,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+          I am a freshmen Engineering student and a front end developer. Coding is my Hobby! 
           </span>
         </h2>
         <div class="about__content">
@@ -162,17 +159,12 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
-                <strong>John Doe</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
-                <strong> remote </strong>
-                projects for agencies, consulted for startups, and collaborated
-                with talented people to create
-                <strong>digital products </strong>
-                for both business and consumer use.
+                <strong>Rahul</strong>
+                and I'm a <strong> Frontend Web Developer </strong> From 
+                Chennai . I have done a lot of freelancing servieces on web development.
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
+                I'm a bit of a digital product junky. I've used
                 hundreds of web and mobile apps in different industries and
                 verticals. Feel free to
                 <strong>contact</strong> me here.
@@ -206,8 +198,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            so these are my projects so far.....
           </span>
         </h2>
 
@@ -292,8 +283,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Need any help or have any doubts ...ask here
           </span>
         </h2>
         <div class="contact__form-container">
@@ -387,8 +377,7 @@
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">DK Rahul</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              you can also reach me out in 
             </p>
           </div>
         </div>
