--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-          I am a freshmen Engineering student and a front end developer. Coding is my Hobby! 
+          I am a freshmen <strong>Computer Science Engineering</strong> student and a <strong>Full Stack Developer</strong>. Coding is my Hobby! 
           </span>
         </h2>
         <div class="about__content">
@@ -177,16 +177,17 @@
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
-              <div class="skills__skill">HTML</div>
-              <div class="skills__skill">CSS</div>
+              <div class="skills__skill">React</div>
+              <div class="skills__skill">TailWind</div>
               <div class="skills__skill">JavaScript</div>
               <div class="skills__skill">C</div>
-              <div class="skills__skill">Ethical Hacking</div>
-              <div class="skills__skill">Photoshop</div>
+              <div class="skills__skill">Python</div>
+              <div class="skills__skill">Krotlin</div>
+              <div class="skills__skill">Bootstrap</div>
+              <div class="skills__skill">Figma</div>
               <div class="skills__skill">Mongo DB</div>
-              <div class="skills__skill">Linux</div>
-              <div class="skills__skill">Block Chain</div>
-              <div class="skills__skill">Android</div>
+              <div class="skills__skill">Kali Linux</div>
+              <div class="skills__skill">Wordpress</div>
               
             </div>
           </div>
