--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
       </div>
     </header>
     <section class="home-hero">
-      <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, i am DK Rahul</h1>
+      <div class="heading-primary">
+        <h1 class="heading-primary">Hey, i am DK Rahul</h1> </div>
         <div class="home-hero__info">
           <p class="text-primary">
            Fun Fact : I hate testers !!
           </p>
 
-        </div>
+      
         <div class="home-hero__cta">
           <a href="./#projects" class="btn btn--bg">Projects</a>
         </div>
