--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
     </header>
     <section class="home-hero">
-      <div class="heading-primary">
+      <div class="home-hero">
         <h1 class="heading-primary">Hey, i am DK Rahul</h1> </div>
         <div class="home-hero__info">
           <p class="text-primary">
