--- a/index.html
+++ b/index.html
@@ -1,107 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Portfolio</title>
-  <meta name="description" content="Portfolio" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
-    rel="stylesheet" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Portfolio</title>
+    <meta name="description" content="Portfolio" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
+      rel="stylesheet" />
+  </head>
+<style>
+  .heading-primary h1 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
 
-<body>
-  <header class="header">
-    <div class="header__content">
-      <div class="header__logo-container">
-        <div class="header__logo-img-cont">
-          <img
-            src="myphoto.jpg"
-            alt="Logo Image"
-            class="header__logo-img"
-          />
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}</style>
+  <body>
+    <header class="header">
+      <div class="header__content">
+        <div class="header__logo-container">
+          <div class="header__logo-img-cont">
+            <img
+              src="myphoto.jpg"
+              alt="Logo Image"
+              class="header__logo-img"
+            />
+          </div>
+          <span class="header__logo-sub">DK Rahul</span>
         </div>
-        <span class="header__logo-sub">DK Rahul</span>
-      </div>
-      <div class="header__main">
-        <ul class="header__links">
-          <li class="header__link-wrapper">
-            <a href="index.html" class="header__link"> Home </a>
-          </li>
-          <li class="header__link-wrapper">
-            <a href="index.html#about" class="header__link"> About </a>
-          </li>
-          <li class="header__link-wrapper">
-            <a href="index.html#projects" class="header__link"> Projects </a>
-          </li>
-          <li class="header__link-wrapper">
-            <a href="index.html#contact" class="header__link"> Contact </a>
-          </li>
-        </ul>
-        <div class="header__main-ham-menu-cont">
-          <img
-            src="ham-menu.svg"
-            alt="hamburger menu"
-            class="header__main-ham-menu"
-          />
-          <img
-            src="ham-menu-close.svg"
-            alt="hamburger menu close"
-            class="header__main-ham-menu-close d-none"
-          />
+        <div class="header__main">
+          <ul class="header__links">
+            <li class="header__link-wrapper">
+              <a href="index.html" class="header__link"> Home </a>
+            </li>
+            <li class="header__link-wrapper">
+              <a href="index.html#about" class="header__link">About </a>
+            </li>
+            <li class="header__link-wrapper">
+              <a href="index.html#projects" class="header__link">
+                Projects
+              </a>
+            </li>
+            <li class="header__link-wrapper">
+              <a href="index.html#contact" class="header__link"> Contact </a>
+            </li>
+          </ul>
+          <div class="header__main-ham-menu-cont">
+            <img 
+              src="ham-menu.svg"
+              alt="hamburger menu"
+              class="header__main-ham-menu"
+            />
+            <img
+              src="ham-menu-close.svg"
+              alt="hamburger menu close"
+              class="header__main-ham-menu-close d-none"
+            />
+          </div>
         </div>
       </div>
-    </div>
-    <div class="header__sm-menu">
-      <div class="header__sm-menu-content">
-        <ul class="header__sm-menu-links">
-          <li class="header__sm-menu-link">
-            <a href="index.html"> Home </a>
-          </li>
-
-          <li class="header__sm-menu-link">
-            <a href="index.html#about"> About </a>
-          </li>
-
-          <li class="header__sm-menu-link">
-            <a href="index.html#projects"> Projects </a>
-          </li>
-
-          <li class="header__sm-menu-link">
-            <a href="index.html#contact"> Contact </a>
-          </li>
-        </ul>
+      <div class="header__sm-menu">
+        <div class="header__sm-menu-content">
+          <ul class="header__sm-menu-links">
+            <li class="header__sm-menu-link">
+              <a href="index.html"> Home </a>
+            </li>
+            <li class="header__sm-menu-link">
+              <a href="index.html#about"> About </a>
+            </li>
+            <li class="header__sm-menu-link">
+              <a href="index.html#projects"> Projects </a>
+            </li>
+            <li class="header__sm-menu-link">
+              <a href="index.html#contact"> Contact </a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </header>
-
-  <section class="home-hero">
-    <div class="home-hero__content">
-      <h1 class="heading-primary">Hey, I am DK Rahul</h1>
-    </div>
-
-    <div class="home-hero__info">
-      </div>
-
-    <div class="home-hero__socials">
-      </div>
-
-    <div class="home-hero__mouse-scroll-cont">
-      </div>
-  </section>
-
-  <section id="about" class="about sec-pad">
-
+    </header>
+    <section class="home-hero">
+      <div class="home-hero__content">
+        <h1 class="heading-primary">Hey, i am DK Rahul</h1>
         <div class="home-hero__info">
           <p class="text-primary">
            Fun Fact : I hate testers !!
           </p>
 
-      
+        </div>
         <div class="home-hero__cta">
           <a href="./#projects" class="btn btn--bg">Projects</a>
         </div>
@@ -217,7 +223,6 @@
             so these are my projects so far.....
           </span>
         </h2>
-
         <div class="projects__content">
           <div class="projects__row">
             <div class="projects__row-img-cont">
@@ -402,7 +407,6 @@
         </div>
       </div>
     </footer>
-
     <script src="index.js"></script>
   </body>
 </html>
