--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet" />
   </head>
 <style>
-  .heading-primary h1 {
+  .home-hero__content h1 {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
@@ -30,8 +30,6 @@
   from { width: 0 }
   to { width: 100% }
 }
-
-/* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
   50% { border-color: orange; }
