--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, i am DK Rahul</h1>
+        <h1 class="heading-primary">Hey, i am Rahul</h1>
         <div class="home-hero__info">
           <p class="text-primary">
            Fun Fact : I hate testers !!
