--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <style>
   .home-hero__content h1 {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid black; /* The typwriter cursor */
+  border-right: .15em solid white; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
@@ -32,7 +32,7 @@
 }
 @keyframes blink-caret {
   from, to { border-color: transparent }
-  50% { border-color: black; }
+  50% { border-color: white; }
 }</style>
   <body>
     <header class="header">
