--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       </div>
     </header>
     <section class="home-hero">
+<div class="home-hero__video-container"></div>
       <div class="home-hero__content">
         <h1 class="heading-primary">Hey,i am Rahul</h1>
         <div class="home-hero__info">
