--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               <p class="about__content-details-para">
                 Hey! It's
                 <strong>Rahul</strong>
-                and I'm a <strong> Frontend Web Developer </strong> From 
+                and I'm a <strong> Full Stack Developer </strong> From 
                 Chennai . I have done a lot of freelancing servieces on web development.
               </p>
               <p class="about__content-details-para">
