--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">DK Rahul</h4>
             <p class="main-footer__short-desc">
-              you can also reach me out in 
+              you can also reach me out in &#128073 rahuldk1105@gmail.com
             </p>
           </div>
         </div>
