--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
               <a href="index.html#about" class="header__link">About </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="index.html#projects" class="header__link">
-                Projects
-              </a>
+              <a href="index.html#projects" class="header__link"> Projects </a>
             </li>
             <li class="header__link-wrapper">
               <a href="index.html#contact" class="header__link"> Contact </a>
