--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="www.linkedin.com/in/rahul-dk" class="home-hero__social-icon-link">
             <img
               src="linkedin-ico.png"
               alt="icon"
