--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h1 class="heading-primary">Hey,i am Rahul</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-           Fun Fact : I hate testers !!
+           Fun Fact: I hate testers !!
           </p>
 
         </div>
@@ -109,7 +109,7 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="www.linkedin.com/in/rahul-dk" class="home-hero__social-icon-link">
+          <a href="https://www.linkedin.com/in/rahul-dk/" class="home-hero__social-icon-link">
             <img
               src="linkedin-ico.png"
               alt="icon"
