--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://github.com/rahuldk1105" class="home-hero__social-icon-link">
             <img
               src="github-ico.png"
               alt="icon"
@@ -136,7 +136,7 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://www.instagram.com/dkrahul_11/" class="home-hero__social-icon-link">
             <img
               src="yt-ico.png"
               alt="icon"
@@ -146,7 +146,7 @@
         </div>
         <div class="home-hero__social">
           <a
-            href="#"
+            href="https://wa.me/<7904078884>"
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
