--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
         <div class="home-hero__social">
           <a
-            href="https://wa.me/<7904078884>"
+            href="https://wa.me/7904078884"
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
