--- a/index.html
+++ b/index.html
@@ -348,14 +348,14 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/rahul-dk/">
                 <img
                   class="main-footer__icon"
                   src="linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/rahuldk1105">
                 <img
                   class="main-footer__icon"
                   src="github-ico.png"
@@ -369,14 +369,14 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/dkrahul_11/">
                 <img
                   class="main-footer__icon"
                   src="yt-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://wa.me/7904078884">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="insta-ico.png"
