--- a/index.html
+++ b/index.html
@@ -386,10 +386,10 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">DK Rahul</h4>
-            <p class="main-footer__short-desc">
+            <h3 class="heading heading-sm text-lt">DK Rahul</h3>
+            <h5 class="main-footer__short-desc">
               you can also reach me out in &#128073 rahuldk1105@gmail.com
-            </p>
+            </h5>
           </div>
         </div>
         <div class="main-footer__lower">
