--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                  Was built with Javascript.
               </p>
               <a
-                href="./project-1.html"
+                href="https://rahuldk1105.github.io/QR-code-Generator/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >View Project</a
@@ -257,7 +257,7 @@
                 A scientific calculator with switch between dark and light modes, built with HTML ,CSS and Java Script.
               </p>
               <a
-                href="./project-2.html"
+                href="https://rahuldk1105.github.io/Scientific-calculator/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >View Project</a
@@ -279,7 +279,7 @@
                 A expression of grattitude for the friends i got last year and a token of friendship, built with HTML and SASS.
               </p>
               <a
-                href="./project-3.html"
+                href="https://rahuldk1105.github.io/letter-web-page/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >View Project</a
