--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
   </head>
 <style>
   .home-hero__content h1 {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid white; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em; /* Adjust as needed */
+  overflow: hidden; 
+  border-right: .15em solid white; 
+  white-space: nowrap;
+  margin: 0 auto; 
+  letter-spacing: .15em; 
   animation: 
     typing 3.5s steps(40, end),
     blink-caret .75s step-end infinite;
 }
 
-/* The typing effect */
 @keyframes typing {
   from { width: 0 }
   to { width: 100% }
@@ -388,7 +387,8 @@
           <div class="main-footer__row main-footer__row-2">
             <h3 class="heading heading-sm text-lt">DK Rahul</h3>
             <h5 class="main-footer__short-desc">
-              you can also reach me out in &#128073 rahuldk1105@gmail.com
+             you can also reach me out in <a href="mailto:rahuldk1105@gmail.com" target="_blank">&#128073 rahuldk1105@gmail.com</a>
+    </h5>
             </h5>
           </div>
         </div>
