--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
           <div class="main-footer__row main-footer__row-2">
             <h3 class="heading heading-sm text-lt">DK Rahul</h3>
             <h5 class="main-footer__short-desc">
-             you can also reach me out in <a href="mailto:rahuldk1105@gmail.com" target="_blank">&#128073 rahuldk1105@gmail.com</a>
+             You can also reach me out in <a href="mailto:rahuldk1105@gmail.com" target="_blank">&#128073 rahuldk1105@gmail.com</a>
     </h5>
             </h5>
           </div>
