--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="temp.jpeg"
+                src="temp.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -244,7 +244,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="temp.jpeg"
+                src="temp.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -266,7 +266,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="temp.jpeg"
+                src="temp.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
