--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="temp.png"
+                src="temp2.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
