--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="home-hero__social">
           <a href="https://github.com/rahuldk1105" class="home-hero__social-icon-link">
             <img
-              src="https://imgur.com/a/PBlOU0L"
+              src="github-ico.png"
               alt="icon"
               class="home-hero__social-icon"
             />
