--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         </div>
         <div class="home-hero__cta">
-          <a href="github-ico.png" class="btn btn--bg">Download CV</a>
+          <a href="RahulDkResume.pdf" class="btn btn--bg">Download CV</a>
         </div>
       </div>
       <div class="home-hero__socials">
