--- a/Section1-bg.html
+++ b/Section1-bg.html
@@ -471,7 +471,8 @@
     </div>
 </div>tem
 
-<Style>body {
+<style>
+    body {
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
   height: 100vh;
   overflow: hidden;
@@ -3034,4 +3035,4 @@
     border-color: #55f; }
   100% {
     border-color: #5f5; } }
-</Style>
+</style>
