--- a/index.html
+++ b/index.html
@@ -268,7 +268,13 @@
         </div>
       </div>
     </section>
-      <div class="visme_d" data-title="Portfolio Forms" data-url="g7qmw8z6-portfolio-forms" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="57692"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
+      <div class="visme_d" data-title="Portfolio Forms"
+        data-url="g7qmw8z6-portfolio-forms" 
+        data-domain="forms" 
+        data-full-page="false" 
+        data-min-height="550px" 
+        data-form-id="57692"></div>
+    <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
 
     <footer class="main-footer">
       <div class="main-container">
