--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <div class="visme_d" data-title="Portfolio Forms"
         data-url="g7qmw8z6-portfolio-forms" 
         data-domain="forms" 
-        data-full-page="false" 
+        data-full-page="true" 
         data-min-height="650px" 
         data-form-id="57692"></div>
     <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
