--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DPHL8BVJZ0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DPHL8BVJZ0');
+</script>
   <body>
     <header class="header">
       <div class="header__content">
