--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   gtag('config', 'G-DPHL8BVJZ0');
 </script>
   <body>
+     <div class="custom-cursor"></div>
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
