--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   gtag('config', 'G-DPHL8BVJZ0');
 </script>
   <body>
+  <section class="background-section">
       <div class="cursor"></div>
     <header class="header">
       <div class="header__content">
@@ -150,6 +151,7 @@
         <div class="mouse"></div>
       </div>
     </section>
+</section>
     <section id="about" class="about sec-pad">
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
