--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Rahul Dk|Full Stack Developer</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Portfolio</title>
-    <meta name="description" content="Portfolio" />
+    <meta name="description" content="rahul" />
+    <meta property="og:site_name" content="Rahul Dk">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Rahul's Portfolio">
+    <meta property="og:description" content="wanna know abt me ? I bet u click this link ">
+    <meta property="og:url" content="https://rahuldk.one">
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/9bdc906322.js"></script>
+    <script async="" src="https://cdn.splitbee.io/sb.js"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
 <!-- Google tag (gtag.js) -->
