--- a/index.html
+++ b/index.html
@@ -210,92 +210,120 @@
         </div>
       </div>
     </section>
-    <section id="projects" class="projects sec-pad">
-      <div class="main-container">
-        <h2 class="heading heading-sec heading-sec__mb-bg">
-          <span class="heading-sec__main">Projects</span>
-          <span class="heading-sec__sub">
-            so these are my projects so far.....
-          </span>
-        </h2>
-        <div class="projects__content">
-          <div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img
-                src="temp.png"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
+    <section class="section projects is-medium is-white has-text-centered">
+      <div class="container is-narrow">
+        <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">My Recent Work</h1>
+        <h2 class="subtitle is-size-5-desktop">Here are a few past design projects I've worked on. Want to see more? <a class="has-text-weight-normal" href="mailto:matt@pendeavor.com">Email me</a>.</h2>
+        <div class="project-grid">  
+          <div class="columns is-multiline is-mobile">
+            <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
+              <figure class="image is-3by2"><img class="project-thumb" src="../img/projects/wfdesignbuild.png">
+                <figcaption>
+                  <h1 class="title is-size-5 is-size-4-widescreen">High-end, custom residential renovaters serving Fraser Valley homeowners.</h1><a class="button is-primary is-outlined is-rounded" href="https://wfdesignbuild.com" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
+                </figcaption>
+                <div class="overlay"></div>
+              </figure>
             </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">QR Code Generator</h3>
-              <p class="projects__row-content-desc">
-                This is a simple QR code generator which converts link and text into portable QR.
-                 Was built with Javascript.
-              </p>
-              <a
-                href="https://rahuldk1105.github.io/QR-code-Generator/"
-                class="btn btn--med btn--theme dynamicBgClr"
-                target="_blank"
-                >View Project</a
-              >
+            <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
+              <figure class="image is-3by2"><img class="project-thumb" src="../img/projects/burkettandco.png">
+                <figcaption>
+                  <h1 class="title is-size-5 is-size-4-widescreen">Accounting and tax services characterized by quality, reliability and trust.</h1><a class="button is-primary is-outlined is-rounded" href="https://www.burkettandco.ca/" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
+                </figcaption>
+                <div class="overlay"></div>
+              </figure>
+            </div>
+            <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
+              <figure class="image is-3by2"><img class="project-thumb" src="../img/projects/chronicled.png">
+                <figcaption>
+                  <h1 class="title is-size-5 is-size-4-widescreen">Blockchain pioneers bringing transparency, trust, and security to supply.</h1><a class="button is-primary is-outlined is-rounded" href="https://www.chronicled.com/" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
+                </figcaption>
+                <div class="overlay"></div>
+              </figure>
+            </div>
+            <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
+              <figure class="image is-3by2"><img class="project-thumb" src="../img/projects/glcsolutions.png">
+                <figcaption>
+                  <h1 class="title is-size-5 is-size-4-widescreen">Business savvy tech experts helping forward thinking companies get things done.</h1><a class="button is-primary is-outlined is-rounded" href="http://glcsolutions.ca" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
+                </figcaption>
+                <div class="overlay"></div>
+              </figure>
+            </div>
+            <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
+              <figure class="image is-3by2"><img class="project-thumb" src="../img/projects/coupal.png">
+                <figcaption>
+                  <h1 class="title is-size-5 is-size-4-widescreen">Vancouver's tower crane rental service and support leader since 1974.</h1><a class="button is-primary is-outlined is-rounded" href="http://coupalcranes.com/" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
+                </figcaption>
+                <div class="overlay"></div>
+              </figure>
+            </div>
+            <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
+              <figure class="image is-3by2"><img class="project-thumb" src="../img/projects/wedlerengineering.png">
+                <figcaption>
+                  <h1 class="title is-size-5 is-size-4-widescreen">Results-oriented, responsive and flexible full service civil engineering firm.</h1><a class="button is-primary is-outlined is-rounded" href="http://wedler.com" target="_blank"><span>View Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
+                </figcaption>
+                <div class="overlay"></div>
+              </figure>
             </div>
           </div>
-          <div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img
-                src="temp1.png"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
+        </div>
+    </section>
+      <section class="section is-medium is-primary has-text-centered is-long-ish">
+      <div class="container">
+        <div class="columns is-centered">
+          <div class="column is-three-fifths">
+            <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">My Startup Projects</h1>
+            <h2 class="subtitle is-size-5-desktop has-text-weight-normal">I'm a bit of a digital product junky. Over the years I've used hundreds of web and mobile apps in different industries and verticals. Eventually, I decided that it would be a fun challenge to design and build my own.</h2>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section startups has-text-centered">
+      <div class="container is-narrow">
+        <div class="startup-grid">
+          <div class="columns is-multiline level">
+            
+            <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">     
+              <div class="box"><img class="logo mb-5" src="../img/logos/shipable.svg">
+                <p>Short, focused design and growth collabs for startup tech founders.</p><a class="link" href="https://shipable.io" target="_blank"><span class="tag is-link is-light is-medium"><i class="fal fa-arrow-up-right-from-square mr-2"></i>shipable.io</span></a>
+              </div>
             </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Scientific Calculator</h3>
-              <p class="projects__row-content-desc">
-                A scientific calculator with switch between dark and light modes, built with HTML ,CSS and Java Script.
-              </p>
-              <a
-                href="https://rahuldk1105.github.io/Scientific-calculator/"
-                class="btn btn--med btn--theme dynamicBgClr"
-                target="_blank"
-                >View Project</a
-              >
+            <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">
+              <div class="box"><img class="logo mb-5" src="../img/logos/houston.svg">
+                <p>Simple feedback and engagement tools that help teams ship winning products.</p><span class="tag is-danger is-light is-medium"><i class="far fa-circle-pause mr-2"></i>on hold</span>
+              </div>
+            </div>
+            <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">
+              <div class="box"><img class="logo mb-5" src="../img/logos/kybercore.svg">
+                <p>Next level plug and play chassis systems for custom DIY lightsaber builds.</p><span class="tag is-danger is-light is-medium"><i class="far fa-circle-pause mr-2"></i>on hold</span>
+              </div>
             </div>
           </div>
-          <div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img
-                src="temp2.png"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
-            </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">2023 grattitude letter</h3>
-              <p class="projects__row-content-desc">
-                A expression of grattitude for the friends i got last year and a token of friendship, built with HTML and SASS.
-              </p>
-              <a
-                href="https://rahuldk1105.github.io/letter-web-page/"
-                class="btn btn--med btn--theme dynamicBgClr"
-                target="_blank"
-                >View Project</a
-              >
+        </div>
+        <div class="callout">
+          <div class="columns is-centered">
+            <div class="column">
+              <h1 class="title is-spaced has-text-weight-bold">Interested in collaborating with me?</h1>
+              <h2 class="subtitle is-size-5-desktop">I’m always open to discussing product design work or partnership opportunities.</h2><a class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="/startup-inquiry"><span class="icon"><i class="fa-regular fa-message-lines"></i></span><span>Start a conversation</span></a>
             </div>
           </div>
         </div>
       </div>
     </section>
-      <div class="visme_d" data-title="Portfolio Forms"
-        data-url="g7qmw8z6-portfolio-forms" 
-        data-domain="forms" 
-        data-full-page="false" 
-        data-min-height="750px" 
-        data-form-id="57692"></div>
-    <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
+<section class="section call-to-action is-primary has-text-centered">
+      <div class="container is-narrow">
+        <div class="box">
+          <div class="columns level">
+            <div class="column level-item">
+              <h1 class="title">Start a project</h1>
+            </div>
+            <div class="column level-item">
+              <p>Interested in working together? We should queue up a time to chat. I’ll buy the coffee.</p>
+            </div>
+            <div class="column level-item"><a class="button is-success is-outlined is-rounded is-medium has-text-weight-normal" href="/project-planner"><span class="icon"><i class="fa-regular fa-hand-horns"></i></span><span>Let's do this</span></a></div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <footer class="main-footer">
       <div class="main-container">
