--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </div>
       </div>
     </section>
-    <section class="new-class">
+    <section class="section projects is-medium is-white has-text-centered">
       <div class="container is-narrow">
         <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">My Recent Work</h1>
         <h2 class="subtitle is-size-5-desktop">Here are a few past design projects I've worked on. Want to see more? <a class="has-text-weight-normal" href="mailto:matt@pendeavor.com">Email me</a>.</h2>
@@ -267,7 +267,7 @@
           </div>
         </div>
     </section>
-      <section class="new-class">
+      <section class="section is-medium is-primary has-text-centered is-long-ish">
       <div class="container">
         <div class="columns is-centered">
           <div class="column is-three-fifths">
@@ -277,7 +277,7 @@
         </div>
       </div>
     </section>
-    <section class="new-class">
+    <section class="section startups has-text-centered">
       <div class="container is-narrow">
         <div class="startup-grid">
           <div class="columns is-multiline level">
@@ -309,7 +309,7 @@
         </div>
       </div>
     </section>
-<section class="new-class">
+<section class="section call-to-action is-primary has-text-centered">
       <div class="container is-narrow">
         <div class="box">
           <div class="columns level">
