--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       </div>
     </section>
     <section class="section projects is-medium is-white has-text-centered">
-<style> @import url("https://use.typekit.net/ojv4ekx.css");
+<span @import url("https://use.typekit.net/ojv4ekx.css");
 a, abbr, acronym, address, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, ol, output, p, pre, q, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
@@ -4565,7 +4565,7 @@ input[name="carousel"] { display: none; }
 .has-background-dark { background-color: #141c3a; }
 
 .tag:not(body).is-light { background-color: rgba(20, 28, 58, 0.08); color: #141c3a; }
-/*# sourceMappingURL=main.css.map */ </style>
+></span>
       <div class="container is-narrow">
         <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">My Recent Work</h1>
         <h2 class="subtitle is-size-5-desktop">Here are a few past design projects I've worked on. Want to see more? <a class="has-text-weight-normal" href="mailto:matt@pendeavor.com">Email me</a>.</h2>
