--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
           </p>
 
         </div>
+<div>
+  
+</div>
         <div class="home-hero__cta">
           <a href="RahulDkResume.pdf" class="btn btn--bg">Download CV</a>
         </div>
