--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 </div>
         <div class="about__content">
           <div class="about__content-main">
+             <span class="heading-sec__sub">
             <h3 class="about__content-title">Get to know me!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
