--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
           I am a freshmen <strong>Computer Science Engineering</strong> student and a <strong>Full Stack Developer</strong>. Coding is my Hobby! 
-          </span>
+          </span></section>
+           <section id="about" class="about sec-pad">
         </h2>
         <div class="about__content">
           <div class="about__content-main">
